	REM: Removed unused Tektite sprite files.
	REM: Removed unused Chuchu sprite files.
	REM: Removed orange and brown sword soldiers.
	REM: Removed old member names from the savegame menu easter eggs.
	REM: Removed unused savegames menu sprite files.
	REM: Removed LA dialogues.
	REM: Removed unused maps.
	REM: Removed the map from the inventory menu (#202).
	REM: Removed unused sprite files.
	TDO: Setup the quest files for the Solarus launcher.
	TDO: Overhaul the bow & arrow system such as in OOT (#145).
	TDO: Redraw hero animations from ALTTD (happy, sad, collapse, ...) (#146).
	TDO: Fix a nil value error in the inventory after buying something from Ravio (#92).
	TDO: Fix "door_manager:open_when_switch_activated()" only opening the last door when there are multiple doors (#75).
	TDO: Fix diagonal jumpers jump lengths being too high in the mountains (#38).
	TDO: Fix low memory issues on MacOS (#39).
	TDO: Fix low framerate in rooms with lots of conveyor belts (#42).
	TDO: Update the statistics menu with treasures from the Excel file (#46).
	TDO: Map the missing caves (#151).
	TDO: Finish realigning trees in the Hyrule Field (#96).
	TDO: Rename some soldier enemies in order to make them appear during the game and not at the beginning (#97).
	TDO: Merge countable items into a single item file (#189).
	TDO: Remove pre-alpha screenshots from the sprites folder (#195).
	TDO: Add a quick swap feature (#196).
	TDO: Fix enemies not going down one layer when there's no ground (#198).
	TDO: Overhaul the game over menu (#199).

Alpha 1.17.1 (//23) "Needlefish Update":
	TDO: Add version conversion scripts in order to keep savegames up to date (#170).
	TDO: Remove *.xcf and *.psd work files from the data files (#169).
	TDO: Add night entities to maps (#67).
	TDO: Add hook entities to trees (#103). 
	TDO: Finish the remaining houses (#104).
	TDO: Add remaining inside maps coordinates (#105).
	TDO: Add items treasure and inventory missing dialogues (#9).