@@ -6,7 +6,7 @@ function item:on_created()
   self:set_savegame_variable("possession_bow")
   self:set_amount_savegame_variable("amount_bow")
   self:set_assignable(true)
-  item:set_sound_when_brandished("common/major_item")
+  item:set_sound_when_brandished("items/major_item")
 end
 
 function item:on_using()
