@@ -4,6 +4,6 @@ local item = ...
 function item:on_created()
 
   self:set_savegame_variable("possession_butter")
-  self:set_sound_when_brandished("common/sidequest_major_item")
+  self:set_sound_when_brandished("items/sidequest_major_item")
 
 end
