@@ -5,7 +5,7 @@ function item:on_created()
   self:set_amount_savegame_variable("amount_fish")
   self:set_brandish_when_picked(false)
   self:set_sound_when_picked("items/small_item1")
-  self:set_sound_when_brandished("common/chest_minor_item")
+  self:set_sound_when_brandished("items/chest_minor_item")
   self:set_assignable(true)
   self:set_max_amount(256)
 end
