@@ -3,7 +3,7 @@ local item = ...
 function item:on_created()
 
   self:set_savegame_variable("possession_power_gloves")
-  self:set_sound_when_brandished("common/major_item")
+  self:set_sound_when_brandished("items/major_item")
 
 end
 
