@@ -5,7 +5,7 @@ function item:on_created()
 
   self:set_savegame_variable("possession_sword")
   self:set_sound_when_picked(nil)
-  item:set_sound_when_brandished("common/major_item")
+  item:set_sound_when_brandished("items/major_item")
 end
 
 function item:on_variant_changed(variant)
