@@ -5,7 +5,7 @@ local game = item:get_game()
 function item:on_created()
 	self:set_assignable(true)
   self:set_savegame_variable("possession_trading_1")
-  self:set_sound_when_brandished("common/major_item")
+  self:set_sound_when_brandished("items/major_item")
 
 end
 
