@@ -4110,6 +4110,7 @@ enemy{
 }
 
 chest{
+  name = "chest",
   layer = 0,
   x = 280,
   y = 485,
