@@ -485,6 +485,7 @@ Alpha 1.17 (started 03/05/23) "Needlefish Update":
 	REM: Removed unused maps.
 	REM: Removed the map from the inventory menu (#202).
 	REM: Removed unused sprite files.
+	REM: Removed the dungeon exploring room variable changing based on the hero position (need to activate sensor instead).
 	TDO: Setup the quest files for the Solarus launcher.
 	TDO: Overhaul the bow & arrow system such as in OOT (#145).
 	TDO: Redraw hero animations from ALTTD (happy, sad, collapse, ...) (#146).
